app/style/MiscComponents.less
/* ... */
.danger-button:hover {
  background-color: var(--error-red-hover);
}

.close-button {
  cursor: pointer;
  display: inline-block;
  padding: 12px 30px 14px 30px;
  border-radius: 5px;
  background-color: var(--title-text-and-button-background);
  box-shadow: 0 5px 13px rgba(0, 0, 0, 0.21);
  color: var(--stroke-color-default);
  font-size: 13px;
  line-height: 17px;
  font-weight: 600;
  text-align: center;
  text-decoration: none;
  text-transform: capitalize;
  transition: all 100ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
  user-select: none;
}

.close-button:hover {
  background-color: var(--title-text-and-button-background-hovered);
}

.manage-pools-button {
  background-color: var(--input-color);
  background-image: @manage-pools-icon;
  background-position: 50% 50%;
  background-size: 12px;
  background-repeat: no-repeat;
  width: 20px;
  height: 20px;
  border-radius: 5px;
  box-shadow: 0 5px 13px rgba(0, 0, 0, 0.21);
  cursor: pointer;

  &:hover {
    background-color: var(--input-color-hover);
  }

  &:active {
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
  }
}

.info-field-modal-button {
  float: right;
  border-radius: 0px;
  background-image: var(--help-getstared);
  background-position: 50% 50%;
  background-size: 20px;
  background-repeat: no-repeat;
  box-shadow: none;
  width: 16px;
  height: 16px;
  background-color: transparent;
  border: 0;
  line-height: inherit;
  text-decoration: none;
  cursor: pointer;
  margin-right: 4px;
}

.info-modal-button {
  border-radius: 0px;
  background-image: var(--tickets-info-icon);
  background-position: 50% 50%;
  background-size: 20px;
  background-repeat: no-repeat;
  box-shadow: none;
  outline: 0;
  display: inline-block;
  vertical-align: middle;
  width: 20px;
  height: 20px;
  padding: 3px;
  background-color: transparent;
  border: 0;
  line-height: inherit;
  text-decoration: none;
  cursor: pointer;
  margin: 4px;
}

.info-modal-button:hover {
  opacity: 0.7;
}

.path-input-and-button {
  display: flex;
  flex-direction: row;
  border-bottom: 1px var(--stroke-color-default) solid;
}

.path-input-area {
  width: 100%;
  margin-right: 15px;
}

.path-button {
  width: 16px;
  height: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  background-image: var(--search-icon);
  background-size: 16px 16px;
}

.path-button:hover {
  opacity: 0.7;
}

.path-input {
  border-style: none;
  cursor: text;
  background: transparent;
  outline: none;
  border: none !important;
  align-items: center;
  font-family: @font-family-regular;
  font-size: 13px;
  padding: 3px 4px 1px 10px;
  display: flex;
  flex: auto;
  flex-grow: 1;
}

.path-input:hover {
  opacity: 0.7;
}

.ticket-cogs-opened,
.ticket-cogs-closed {
  display: inline-block;
  vertical-align: middle;
  border-radius: 0px;
  background-position: 50% 50%;
  background-size: 20px;
  background-repeat: no-repeat;
  box-shadow: none;
  width: 20px;
  height: 20px;
  background-color: transparent;
  color: var(--background-back-color);
  border: 0;
  text-decoration: none;
  cursor: pointer;
}

.ticket-cogs-opened {
  background-image: var(--tickets-cogs-opened-icon);
}

.ticket-cogs-closed {
  background-image: @tickets-cogs-closed-icon;
}

.ticket-cogs-opened:hover,
.ticket-cogs-closed:hover {
  opacity: 0.7;
}

.rescan-progress-area {
  color: var(--disabled-color);
  font-size: 13px;
}

.rescan-progress-percent {
  color: var(--input-color-default);
}

.rescan-progress-fraction {
  color: var(--input-color-default);
  margin: 0px 4px 0px 4px;
}

.rescan-progress-indicator {
  margin: -14px 0px 10px -20px;
  width: @sidebar-width;

  .linear-progress.small {
    border-radius: 0px;
    background-color: var(--input-color-hover);
  }

  .linear-progress.small .linear-progress-bar {
    background: var(--accent-color);
    border-radius: 0px;
  }
}

.rescan-button-area {
  padding-top: 2px;
  padding-right: 10px;
  float: left;
}

.rescan-button {
  width: 16px;
  height: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  background-image: var(--menu-rescan-icon);
  background-size: 16px 16px;
  cursor: pointer;
}

.rescan-button:not(.spin):hover {
  opacity: 0.7;
  background-image: @menu-rescan-hover-icon;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.rescan-button.spin {
  animation: spin 1s linear infinite;
}

.rescan-button.spin:hover {
  opacity: 1;
}

.rescan-cancel-button-area {
  padding-top: 2px;
  float: right;
}

.gettickets-cancel-button,
.rescan-cancel-button {
  width: 16px;
  height: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  background-image: @menu-cancel-rescan-icon;
  background-size: 16px 16px;
  cursor: pointer;
  margin: 10px;
  background-repeat: no-repeat;
}

.gettickets-cancel-button:hover,
.rescan-cancel-button:hover {
  opacity: 0.7;
}

.transaction-link {
  cursor: pointer;
  color: var(--link-color);
}

.transaction-link:hover {
  color: var(--link-hover-color);
}

[data-pseudo-content]::before,
[data-pseudo-content--before]::before,
[data-pseudo-content--after]::after {
  content: attr(data-pseudo-content);
}

.inline-field {
  display: flex;
  margin-bottom: 1.5em;
}

.inline-field-field {
  flex-grow: 1;
  padding-left: 0.5em;
}

.tabs > .tab {
  text-align: center;
  vertical-align: middle;
}

.tabs > .tab > a {
  margin: 0px 5px 0px 5px;
  color: var(--tab-text);
  text-decoration: none;
}

.tabs > .tab > a:hover,
.tabs > .tab > a.active {
  color: var(--tab-text-active-hover);
}

.no-transactions-indicator,
.no-tickets-indicator,
.no-more-tickets-indicator,
.no-stats-indicator {
  text-align: center;
  color: var(--title-text-and-button-background);
  height: 150px;
  background-repeat: no-repeat;
  background-size: 80px;
  background-position: center 30px;
}

.no-transactions-indicator {
  color: var(--title-text-and-button-background);
}
/* ... */

